--- a/src/components/TabImage/TabImage.css
+++ b/src/components/TabImage/TabImage.css
@@ -1,6 +1,6 @@
 .tabs-img {
   width: 100%;
-  height: 30rem;
-  border-radius: 0.5rem;
+  height: 18.75rem;
+  border-radius: 0.3125rem;
   object-fit: cover;
 }
